--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -17,8 +17,7 @@
 # along with GNU Radio; see the file COPYING.  If not, write to
 # the Free Software Foundation, Inc., 51 Franklin Street,
 # Boston, MA 02110-1301, USA.
-
 install(FILES
-    kicksat2gs_sliding_window_max_ff.xml
-    kicksat2gs_sliding_window_min_ff.xml DESTINATION share/gnuradio/grc/blocks
+    kicksat2gs_moving_max_ff.xml
+    DESTINATION share/gnuradio/grc/blocks
 )
